<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.demo</groupId>
  <artifactId>Test</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <dependencies>
  	<dependency>
  		<groupId>io.appium</groupId>
  		<artifactId>java-client</artifactId>
  		<version>4.1.2</version>
	</dependency>
	<dependency>
		<groupId>log4j</groupId>
		<artifactId>log4j</artifactId>
		<version>1.2.16</version>
		<scope>provided</scope>
	</dependency>
	<dependency>
    	<groupId>org.apache.poi</groupId>
    	<artifactId>poi-ooxml</artifactId>
    	<version>3.15</version>
	</dependency>
	<dependency>
		<groupId>org.testng</groupId>
		<artifactId>testng</artifactId>
		<version>LATEST</version>
	</dependency>
  </dependencies>
  <build>
    <sourceDirectory>src</sourceDirectory>
    <plugins>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.3</version>
        <configuration>
          <source>1.8</source>
          <target>1.8</target>
        </configuration>
      </plugin>
      <plugin>
		  <groupId>org.apache.maven.plugins</groupId>
		  <artifactId>maven-surefire-plugin</artifactId>
		  <version>2.18.1</version>
		  <configuration>
		      <!-- 解决用maven执行test时 日志乱码的问题，详见：http://www.cnblogs.com/discuss/archive/2010/10/27/1862225.html -->
			  <argLine>-Dfile.encoding=UTF-8</argLine>
			  <!-- 解决maven oom问题http://blog.csdn.net/e5945/article/details/7740904 -->
			  <argLine>-Xms512m -Xmx1024m -XX:PermSize=128m -XX:MaxPermSize=128m</argLine>
			  <forkCount>0</forkCount>
			  <configuration>
                  <systemPropertyVariables>
                      <dataPath>${dataPath}</dataPath>
                      <resultPath>${resultPath}</resultPath>
                  </systemPropertyVariables>
              </configuration>
			  <suiteXmlFiles>
			      <suiteXmlFile>testng.xml</suiteXmlFile>
			  </suiteXmlFiles>
		  </configuration>
	  </plugin>
    </plugins>
  </build>
</project>